<resources>
    <string name="app_name">Tutu.ru - Test</string>

    <!--Information about app-->
    <string name="info_description">
        A test application for Tutu.ru company
    </string>
    <string name="info_copyright">
        Yuriy Lutsenko, 2017
    </string>
    <string name="info_version">
        Version 1.0
    </string>

    <!--Navigation drawer-->
    <string name="menu_routes">
        Route choosing
    </string>

    <string name="menu_info">
        App info
    </string>

    <!--Navigation drawer behaviour-->
    <string name="navigation_drawer_open">

    </string>
    <string name="navigation_drawer_close">

    </string>

    <!--Menu-->
    <string name="action_refresh">
        Refresh
    </string>

    <!--Default parameters for screens with listed responseStations-->
    <string name="default_station_name">Station</string>
    <string name="default_country_name">Country</string>
    <string name="default_address">Address</string>
    <string name="station_font">sans-serif</string>
    <string name="group_title">Country, city</string>

    <!--A hint for query search in departure responseStations screen-->
    <string name="departure_hint">Insert departure station</string>

    <!--Service messages-->
    <string name="loading_stations">Stations loading…</string>
    <string name="error_message">Error occurred while loading. Please try again</string>

    <!--Tab titles-->
    <string name="departure_stations">Departure stations</string>
    <string name="arrival_stations">Arrival stations</string>
    <string name="dates">Dates</string>

    <!--Confirmation buttons-->
    <string name="exactly">Exactly!</string>
    <string name="refresh_question">Refreshing data can take some time. Are you sure?</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>

    <!--Confirmation messages-->
    <string name="departure_added">Departure station added successfully</string>
    <string name="arrival_added">Arrival station added successfully</string>
    <string name="date_added">Date added successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
