<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yurich.tuturutest.information.InfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_description"
        android:id="@+id/description"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/info_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_copyright"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_version"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/info_copyright"/>

</RelativeLayout>
